--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Aguilera95/Project2#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "multer": "^1.4.2",
