--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
   "homepage": "https://github.com/Aguilera95/Project2#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.22.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "express-form-data": "^2.0.13",
     "express-session": "^1.17.1",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
